--- a/www/css/site.css
+++ b/www/css/site.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300italic,300,100);
 
 /* ---------------------------------------------- */
 /* Basic Startup */
@@ -11,31 +10,65 @@
 
 html,
 body {
-    background-color:#fbfbfb;
+    background-color:#fff;
     color: #555;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
     overflow-x: hidden;
 }
 
+.clearfix {zoom: 1}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
 
+
+/* ---------------------------------------------- */
+/* Header */
+/* ---------------------------------------------- */
+.container { background: #fbfbfb; }
+.headerTab { padding: 0 !important; }
 .headerTitle {
     background: #215399;
-    padding: 10px;
+    padding: 50px;
 }
-.headerTab {
-    background: #3a7bd5;
-}
-.headerTitle, .headerTab > ul > li > a {
-    text-shadow: none;
-    color:#fff;
-    border-style: none;
-    font-weight: 400;
+.headerTitleLink {
+    text-shadow: none !important;
+    color: #FFFFFF;
 }
 
-.headerTab > ul > li > a:hover {
-    text-shadow: none;
-    color:#ccc;
+
+.headerTitle,
+.headerNavLink {
+    text-shadow: none !important;
+    color: #fff !important;
+    border-style: none !important;
+    font-weight: 400;
+    background-color: none;
+}
+
+/* Tab Bar */
+.headerNav {
+    background: #3a7bd5;
+}
+.headerNavLink {
+    text-shadow: none !important;
+}
+
+
+.headerNavLink:hover,
+.headerNavLink:focus,
+.headerNavLink:visited,
+.headerNavLink:active {
+    color:#cccccc !important;
+    background: #215399 !important;
+    -webkit-box-shadow: 0 0 12px #215399 !important;
+    -moz-box-shadow: 0 0 12px #215399 !important;
+    box-shadow: 0 0 12px #215399 !important;
 }
