--- a/www/template/scholarship_list.html
+++ b/www/template/scholarship_list.html
@@ -1,7 +1,6 @@
 <ul data-role="listview" data-inset="true" style="margin: 0px">
     {{#each scholar}}
-    <li><a href='#'>
-            <!--<img src="img/uc.jpg" height="100%">-->
+    <li data-id="{{m_id}}"><a href='#page-scholarship-detail'>
             <h2>{{m_name}}</h2>
             <p>{{m_desc}}</p>
         </a></li>
