--- a/www/css/site.css
+++ b/www/css/site.css
@@ -141,3 +141,10 @@ body {
     font-weight: lighter;
     text-transform: none;
 }
+.div-cicle {
+    border-radius: 50%;
+    background: #73AD21;
+    padding: 10px; 
+    width: 50px;
+    height: 50px; 
+}
