--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -10,7 +10,12 @@
     <p style="font-size:12px;line-height: 1.25em;margin-top:-10px;color: brown">{{uni_name}} ({{m_name}})</p>
     <div class="card-image">
         <!--<img alt="home" src="img/sample_1.jpg" />-->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.905183401383!2d104.8686647143423!3d11.558654647429234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951b8486eb709%3A0x36ceffa00cb4ff9d!2sUniversity+of+Cambodia!5e0!3m2!1sen!2skh!4v1447646958223" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div id="map-page" data-url="map-page" >
+            <div role="main" class="ui-content" id="map-canvas" style="width: 100%; height: 450px;">
+          
+            </div>
+        </div>
+        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.905183401383!2d104.8686647143423!3d11.558654647429234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951b8486eb709%3A0x36ceffa00cb4ff9d!2sUniversity+of+Cambodia!5e0!3m2!1sen!2skh!4v1447646958223" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
     </div>    
     <!--Scholarship Info-->
     <div style="padding: 5px;margin-top:5px;font-size: 16px">ពត៌មានអាហារូបករណ៍</div>
