--- a/www/css/card.css
+++ b/www/css/card.css
@@ -1,43 +1,44 @@
 .card {
-  background: #FFF;
-  /* border: 0px solid #AAA; */
-  box-shadow: 0px 1px 1px 0px #AAA;
-  padding: 0px;
-  margin-top: 15px;
-  margin-right: 7.5px;
-  margin-bottom: 15px;
-  margin-left: 7.5px;
-  overflow: hidden;
-  border-radius: 0px;
+    width: 97%;
+    background: #FFF;
+    border: 0px solid #AAA; 
+    box-shadow: 0px 1px 1px 0px #AAA;
+    padding: 0px;
+    margin-top: 15px;
+    margin-right: 7.5px;
+    margin-bottom: 15px;
+    margin-left: 7.5px;
+    overflow: hidden;
+    border-radius: 0px;
 }
 .card h1 {
-  margin: 0px;
-  padding: 10px;
-  padding-bottom: 0px;
+    margin: 0px;
+    padding: 10px;
+    padding-bottom: 0px;
 }
 .card p {
-  margin: 0px;
-  padding: 10px;
+    margin: 0px;
+    padding: 10px;
 }
 .card-image {
-  width: 100%;
-  height: 200px;
-  padding: 0px;
-  margin: 0px;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-  overflow: hidden;
+    width: 100%;
+    height: 200px;
+    padding: 0px;
+    margin: 0px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    overflow: hidden;
 }
 .card-image .banner {
-  height: 50px;
-  width: 50px;
-  top: 0px;
-  right: 0px;
-  background-position: top right;
-  background-repeat: no-repeat;
-  background-image: url('../images/new.png');
-  position: absolute;
+    height: 50px;
+    width: 50px;
+    top: 0px;
+    right: 0px;
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-image: url('../images/new.png');
+    position: absolute;
 }
 .card-image h1, 
 .card-image h2, 
@@ -45,14 +46,14 @@
 .card-image h4, 
 .card-image h5, 
 .card-image h6 {
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  color: white;
-  background: rgba(0,0,0,0.65);
-  margin: 0px;
-  padding: 6px;
-  border: none;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    color: white;
+    background: rgba(0,0,0,0.65);
+    margin: 0px;
+    padding: 6px;
+    border: none;
 }
 div.holoPressEffectDiv {
     background-color: #CCCCCC;
