Update contact for scholarship detail

--- a/www/template/sch_detail.html
+++ b/www/template/sch_detail.html
@@ -1,4 +1,4 @@
-<td style="width:120px">Amount</td>
+<td style="width:120px">ចំនួនអាហារូបករណ៍</td>
 <td>
     <ul style="margin-left: 15px">
         {{#each sch_detail}}
