--- a/www/template/requirement.html
+++ b/www/template/requirement.html
@@ -1,4 +1,4 @@
-<div style="padding: 5px;margin-top:5px;font-size: 16px">Requirement Info</div>
+<div style="padding: 5px;margin-top:5px;font-size: 16px">លក្ខខណ៍នៃការជ្រើសរើស</div>
 <div style="padding: 10px">
     <table class="ui-responsive table-stroke" data-role="table" data-mode="" style="font-size:12px;">     
         <tbody>
