--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -6,7 +6,7 @@
     <a href="index.html" data-icon="search" class="headerTitleLink"></a>
 </div>
 <!--<div class="card" style="position: absolute;top:145px">-->
-<div>
+<div role="main" class="ui-content" style="padding:10px">
     <div class="card">
         <div style="padding:5px;float:left"><img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" width="50px"></div>
         <p style="font-size:16px;line-height: 1.25em;">{{sch_name}}</p>
@@ -65,6 +65,5 @@
         <!--Contact Info -->
         <div id="list-contacts"></div>
     </div>
-
 </div>
 {{/each}}
