--- a/www/css/card.css
+++ b/www/css/card.css
@@ -8,7 +8,7 @@
     margin-right: 7.5px;
     margin-bottom: 15px;
     margin-left: 7.5px;*/
-    margin:10px;
+    /*margin:10px;*/
     overflow: hidden;
     border-radius: 0px;
 }
@@ -30,6 +30,7 @@
     background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
+    background: #ddd;
 }
 .card-image .banner {
     height: 50px;
