--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -1,9 +1,7 @@
 {{#each scholar}}
-<!--<div data-role="header" class="headerTitle" style="position: fixed;z-index:1;width: 100%">--> 
-<div data-role="header" class="headerTitle" style="">
-    <a href="index.html" data-icon="delete" class="headerTitleLink"></a>
+<div data-role="header" class="headerTitle" data-position="fixed">
+    <a href="./" data-rel="back" class="ui-btn-left ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow ui-corner-all"  data-role="button" role="button">Back</a>
     <h1>{{sch_name}}</h1>
-    <a href="index.html" data-icon="search" class="headerTitleLink"></a>
 </div>
 <!--<div class="card" style="position: absolute;top:145px">-->
 <div role="main" class="ui-content" style="padding:10px">
@@ -16,8 +14,7 @@
                 <div role="main" class="ui-content" id="map-canvas" style="width: 100%; height: 450px;">                
 
                 </div>
-            </div>
-            <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.905183401383!2d104.8686647143423!3d11.558654647429234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951b8486eb709%3A0x36ceffa00cb4ff9d!2sUniversity+of+Cambodia!5e0!3m2!1sen!2skh!4v1447646958223" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+            </div>            
         </div>    
         <!--Scholarship Info-->
         <div style="padding: 5px;margin-top:5px;font-size: 16px">ពត៌មានអាហារូបករណ៍</div>
