Update search on header

--- a/www/css/site.css
+++ b/www/css/site.css
@@ -10,7 +10,7 @@
 
 html,
 body {
-    background-color:#fff;
+    background-color:#fbfbfb;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
@@ -133,10 +133,45 @@ body {
     font-weight: lighter;
     text-transform: none;
 }
-.div-cicle {
-    border-radius: 50%;
-    background: #73AD21;
-    padding: 10px; 
-    width: 50px;
-    height: 50px; 
+
+.university li {
+    background: #fbfbfb !important;
+    margin-bottom: 10px !important;
+    border-top-left-radius: 5px !important;
+    border-bottom-left-radius: 5px !important;
+    -webkit-box-shadow: 0 0 12px #b1b1b1 !important;
+    -moz-box-shadow: 0 0 12px #b1b1b1 !important;
+    box-shadow: 0 0 12px #b1b1b1 !important;
 }
+
+.university li a {
+    padding: 0;
+    border: none !important;
+}
+
+.university.universityIcon {
+    border-top-left-radius: 5px !important;
+    border-bottom-left-radius: 5px !important;
+    background: #2bb5c4 !important;
+    width: 10px;
+    height: 80px;
+    float: left;
+    margin-right: 15px;
+    text-align: center;
+    font-size: 50px;
+    color: #fff;
+    padding: 8px 0;
+    font-weight: lighter;
+}
+
+.university li a h2 {
+    color: #6b7279;
+    font-weight: lighter;
+}
+
+.university li a p {
+    color: #b1b6bc;
+    font-weight: lighter;
+    text-transform: none;
+}
+
