--- a/www/template/major.html
+++ b/www/template/major.html
@@ -1,5 +1,4 @@
-<input type="search" name="search" id="search-basic" data-type="search" value="" />
-<ul data-filter="true" data-input="#search-basic" data-role="listview" data-inset="true" class="major">
+<ul data-role="listview" data-inset="true" class="major" data-filter="true" data-input="#search-major">
     {{#each major}}
     <li data-icon="false">
         <a href="#">
