--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -1,6 +1,6 @@
 {{#each scholar}}
 <div data-role="header" class="headerTitle" data-position="fixed">
-    <a href="./" data-rel="back" class="ui-btn-left ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow ui-corner-all"  data-role="button" role="button">Back</a>
+    <a href="./" data-rel="back" class="ui-btn-left ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow ui-corner-all"  data-role="button" role="button" style="margin-top: 5px">Back</a>
     <h1>{{sch_name}}</h1>
 </div>
 <!--<div class="card" style="position: absolute;top:145px">-->
