--- a/www/template/university.html
+++ b/www/template/university.html
@@ -1,7 +1,7 @@
 <div class="my-page" data-url="demo-page">
     <div role="main" class="ui-content">
         
-        <ul data-role="listview" data-inset="true">
+        <ul data-role="listview" data-inset="true" data-filter="true" data-input="#search-university">
             {{#each university}}
             <li><a href="#">
                     <img src="http://scholarship.ezytech.biz/{{uni_img_path}}" style="height: 100%" class="ui-li-thumb">
