--- a/www/template/scholarship_list.html
+++ b/www/template/scholarship_list.html
@@ -1,9 +1,8 @@
-<ul data-role="listview" data-inset="true" style="margin: 0px" id="scholarship-listview" class="major">
+<ul data-role="listview" data-inset="true" style="margin: 5px" id="scholarship-listview" class="university" data-filter="true" data-input="#search-sch">
     {{#each scholar}}
     <li onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
         <a href='#page-scholarship-detail' data-transition="slide">
-            <div class="major majorIcon" style="">
-                
+            <div class="university universityIcon" style="">                
             </div>
             <h2>{{sch_name}}</h2>
             <p>{{uni_name}}</p>
