--- a/www/template/major.html
+++ b/www/template/major.html
@@ -1,4 +1,4 @@
-<ul data-role="listview" data-inset="true" class="major" data-filter="true" data-input="#search-major">
+<ul data-role="listview" data-inset="true" style="margin: 5px" class="major" data-filter="true" data-input="#search-major">
     {{#each major}}
     <li data-icon="false">
         <a href="#">
