--- a/www/template/univ_detail.html
+++ b/www/template/univ_detail.html
@@ -1,5 +1,33 @@
-<div data-role="header" class="headerTitle" style="">
-    <a href="index.html" data-icon="delete" class="headerTitleLink"></a>
-    <h1>{{sch_name}}</h1>
-    <a href="index.html" data-icon="search" class="headerTitleLink"></a>
+{{#each univer}}
+<div data-role="header" class="headerTitle" data-position="fixed">
+    <a href="./" data-rel="back" class="ui-btn-left ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow ui-corner-all"  data-role="button" role="button" style="margin-top: 5px">Back</a>
+    <h1>{{uni_name}}</h1>
 </div>
+<!--<div class="card" style="position: absolute;top:145px">-->
+<div role="main" class="ui-content" style="padding:10px">
+    <div class="card">
+        <div style="padding:5px;float:left"><img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" width="50px"></div>
+        <p style="font-size:16px;line-height: 1.25em;">{{uni_name}}</p>
+        <p style="font-size:12px;line-height: 1.25em;margin-top:-10px;color: brown">{{uni_desc}}</p>
+        <div class="card-image">
+            <div id="map-page" data-url="map-page" >
+                <div role="main" class="ui-content" id="map-canvas" style="width: 100%; height: 450px;">                
+
+                </div>
+            </div>            
+        </div>    
+        <div id="list-contacts"></div>
+        <!--Scholarship Info-->
+        <div style="padding: 5px;margin-top:5px;font-size: 16px">ពត៌មានអាហារូបករណ៍</div>
+        <div style="padding: 10px">
+            <table class="ui-responsive table-stroke" data-role="table" data-mode="" style="font-size:12px;">     
+                <tbody>
+                    <tr>
+                        <td style="width:120px">សាកលវិទ្យាល័យ</td>
+                    </tr>           
+                </tbody>
+            </table>    
+        </div>
+    </div>
+</div>
+{{/each}}
