--- a/www/template/contact_for_sch.html
+++ b/www/template/contact_for_sch.html
@@ -9,15 +9,20 @@
             </tr> 
             <tr>
                 <td style="width:120px">លេខទំនាក់ទំនង</td>
-                <td>{{c_phone1}} {{c_phone2}} {{c_phone3}}</td>
+                <td><a href="tel:{{c_phone1}}">{{c_phone1}}</a> <a href="tel:{{c_phone2}}">{{c_phone2}}</a> <a href="tel:{{c_phone3}}">{{c_phone3}}</a> </td>
+                
             </tr>
             <tr>
                 <td style="width:120px">អ៊ីម៉ែល</td>
-                <td>{{c_email}}</td>
+<!--                <td>{{c_email}}</td>-->
+                <td><a href="mailto:{{c_email}}">{{c_email}}</a></td>
             </tr>
             <tr>
                 <td>គេហទំព័រ</td>
-                <td>{{c_website}}</td>
+                <td>
+                    <!--<a href="{{c_website}}">{{c_website}}</a>--> 
+                    <a href="http://{{c_website}}" onclick="window.open('http://'{{c_website}}, '_blank')" target="_blank" rel="external" data-ajax="false">{{c_website}}</a>
+                </td>
             </tr>  
             {{/each}}
         </tbody>
