--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -10,7 +10,7 @@
         <p style="font-size:16px;line-height: 1.25em;">{{sch_name}}</p>
         <p style="font-size:12px;line-height: 1.25em;margin-top:-10px;color: brown">{{uni_name}} ({{m_name}})</p>
         <div class="card-image">
-            <div id="map-page" data-url="map-page" >
+            <div id="sch-map-page" data-url="map-page" >
                 <div role="main" class="ui-content" id="map-uni-sch" style="width: 100%; height: 450px;">               
 
                 </div>
