--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -11,9 +11,7 @@
         <p style="font-size:12px;line-height: 1.25em;margin-top:-10px;color: brown">{{uni_name}} ({{m_name}})</p>
         <div class="card-image">
             <div id="sch-map-page" data-url="map-page" >
-                <div role="main" class="ui-content" id="map-uni-sch" style="width: 100%; height: 450px;">               
-
-                </div>
+                <div role="main" class="ui-content" id="map-uni-sch" style="width: 100%; height: 450px;"></div>
             </div>            
         </div>    
         <!--Scholarship Info-->
