--- a/www/template/requirement.html
+++ b/www/template/requirement.html
@@ -1,11 +1,11 @@
-<div style="padding: 5px;margin-top:5px;font-size: 16px">លក្ខខណ៍នៃការជ្រើសរើស</div>
-<div style="padding: 10px">
-    <table class="ui-responsive table-stroke" data-role="table" data-mode="" style="font-size:12px;">     
+<div class="sch-detail-info-title">លក្ខខណ៍នៃការជ្រើសរើស</div>
+<div class="sch-detail-info-detail">
+    <table class="ui-responsive table-stroke sch-detail-info-detail-table" data-role="table" data-mode="">     
         <tbody>
             {{#each req}}
             <tr>
                 <td style="width:120px">
-                    <ul style="margin-left: 15px">
+                    <ul style="margin-left: 15px !important">
                         <li>{{req_desc}}</li>
                     </ul>
                 </td>
