--- a/www/template/sch_detail.html
+++ b/www/template/sch_detail.html
@@ -1,6 +1,6 @@
-<td style="width:120px">ចំនួនអាហារូបករណ៍</td>
+<td>ចំនួនអាហារូបករណ៍</td>
 <td>
-    <ul style="margin-left: 15px">
+    <ul style="margin-left: 15px !important;">
         {{#each sch_detail}}
         <li>{{sd_amount}} ({{sd_percentage}})</li>
         {{/each}}
