--- a/www/template/scholarship_list.html
+++ b/www/template/scholarship_list.html
@@ -1,9 +1,8 @@
-<ul data-role="listview" data-inset="true" style="margin: 5px" id="scholarship-listview" class="university" data-filter="true" data-input="#search-sch">
+<ul data-role="listview" data-inset="true" id="scholarship-listview" class="scholar" data-filter="true" data-input="#search-sch">
     {{#each scholar}}
-    <li data-uni-map="{{uni_map}}" onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
+    <li data-icon="false" data-uni-map="{{uni_map}}" onclick="ScholarshipModel.fetchById({{sch_id}},{{uni_id}})">
         <a href='#page-scholarship-detail' data-transition="slide">
-            <div class="university universityIcon" style="">                
-            </div>
+            <div class="scholar scholarIcon scholarIcon4"></div>
             <h2>{{sch_name}}</h2>
             <p>{{uni_name}}</p>
             <p style="color: brown">{{m_name}}</p>            
