--- a/www/template/major.html
+++ b/www/template/major.html
@@ -2,7 +2,7 @@
     {{#each major}}
     <li data-icon="false" onclick="ScholarshipModel.fetchByMajorId({{m_id}})">
         <a href="#page-scholarship-by-major"  data-transition="slide">
-            <div class="major majorIcon">
+            <div class="major majorIcon majorIcon1">
                 {{m_sub_name}}
             </div>
             <h2>{{m_name}}</h2>
