finish scholarship list by university

--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -59,7 +59,7 @@
                 <!--Requirement Info-->
                 <div id="list-requirements"></div>
                 <!--Contact Info -->
-                <div id="list-contacts"></div>                
+                <div class="list-contacts"></div>                
             </div>
         </div>
         <div class="btn-share">
@@ -103,7 +103,7 @@
             <div class="map-box" id="sch-map-page">
                 <div class="map" id="map-uni-sch"></div>
             </div>   
-            <div id="contact-for-sch-map"></div>
+            <div class="contact-for-sch-map"></div>
         </div> 
     </div>
 </div>
