--- a/www/template/scholarship_list_by_uni.html
+++ b/www/template/scholarship_list_by_uni.html
@@ -1,3 +1,13 @@
+<header class="header-title">
+    <nav class="menu-header">
+        <h1 id="header-title" class="h1-header toLeft">អាហារូបករណ៍</h1>
+        <ul class="toRight menu-header-svg" style="padding: 0; margin: 0;">
+            <li>
+                <a href="./" data-rel="back" style="margin-top: 5px !important" class="ui-btn-right ui-btn ui-icon-arrow-l ui-btn-icon-notext ui-shadow ui-corner-all"  data-role="button" role="button">Back</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 <div class="container">
     <div style="padding: 10px !important">
         <div class="sch-detail">
