Update Num of sch to major and University

--- a/www/template/major.html
+++ b/www/template/major.html
@@ -6,7 +6,7 @@
                 {{m_sub_name}}
             </div>
             <h2>{{m_name}}</h2>
-            <p>{{m_desc}}</p>
+            <p>{{m_desc}} ({{num_of_sch}})</p>
         </a>
     </li>
     {{/each}}
