--- a/www/template/university.html
+++ b/www/template/university.html
@@ -6,7 +6,7 @@
                 <img src="http://scholarship.ezytech.biz/{{uni_logo_path}}" class="university universityLogo"/>
             </div>
             <h2>{{uni_name}}</h2>
-            <p>{{uni_shortcut}}</p>
+            <p>{{uni_shortcut}} ({{num_of_sch}})</p>
         </a>
     </li>
     {{/each}}
