Remove share function

--- a/www/template/univ_detail.html
+++ b/www/template/univ_detail.html
@@ -39,7 +39,7 @@
                 <div class="list-contacts"></div>                
             </div>
         </div>
-        <div class="btn-share">
+<!--        <div class="btn-share">
             <ul class="btn-share btn-social">
                 <li>
                     <a href="#">
@@ -74,14 +74,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
-        <!--Map-->
-        <div class="sch-detail">
-            <div class="map-box" id="sch-map-page">
-                <div class="map" id="map-uni"></div>
-            </div>   
-            <div class="contact-for-sch-map"></div>
-        </div> 
+        </div>-->
         <!--Scholarship list-->
         <div class="btn-share">
             <ul class="btn-share btn-social">
@@ -89,7 +82,15 @@
                     <a href="#page-scholarship-by-uni" data-transition="slide">អាហារូបករណ៍</a>
                 </li>                
             </ul>
-        </div>        
+        </div>   
+        <!--Map-->
+        <div class="sch-detail">
+            <div class="map-box" id="sch-map-page">
+                <div class="map" id="map-uni"></div>
+            </div>   
+            <div class="contact-for-sch-map"></div>
+        </div> 
+             
     </div>
 </div>
 {{/each}}
