--- a/www/template/scholarship_detail.html
+++ b/www/template/scholarship_detail.html
@@ -63,9 +63,9 @@
             </div>
         </div>
         <div class="btn-share">
-            <ul class="btn-share btn-social">
+<!--            <ul class="btn-share btn-social">
                 <li>
-                    <a href="#">
+                    <a href="#" onclick="window.plugins.socialsharing.shareViaFacebook('Message via Facebook', null, null /* url */, function() {console.log('share ok')}, function(errormsg){alert(errormsg)})">
                         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                              width="32px" height="32px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                         <path d="M288,192v-38.1c0-17.2,3.8-25.9,30.5-25.9H352V64h-55.9c-68.5,0-91.1,31.4-91.1,85.3V192h-45v64h45v192h83V256h56.4l7.6-64
@@ -91,12 +91,12 @@
                         <g>
                         <polygon points="448,384 448,141.8 316.9,241.6 385,319 383,321 304.1,251.4 256,288 207.9,251.4 129,321 127,319 195,241.6
                                  64,142 64,384 	"/>
-                        <polygon points="439.7,128 72,128 256,267.9 	"/>
+                        <polygon points="439.7,128 72,128 256,267.9"/>
                         </g>
                         </svg>
                     </a>
                 </li>
-            </ul>
+            </ul>-->
         </div>
         <!--Map-->
         <div class="sch-detail">
